tests/cases/compiler-development/artifact/errors/diagnostic-match-struct-pattern-missing-field.diagnostic
diagnostic error code=T0001 family=type message="struct match pattern must mention all fields or use '..'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/match/errors/match-struct-pattern-missing-field.ari" display="tests/cases/match/errors/match-struct-pattern-missing-field.ari" bytes=161
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-struct-pattern-missing-field.ari" line=9 column=5 end_line=9 end_column=10 byte_start=120 byte_end=125 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-struct-pattern-missing-field.ari:9:5\n   |\n 9 |     Point { x: 1 } => 10,\n   |     ^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/match/errors/match-struct-pattern-missing-field.ari" line=3 column=3 end_line=3 end_column=4 byte_start=27 byte_end=28 message="missing field 'y' declared here"
  Snippet label=1 text="  --> tests/cases/match/errors/match-struct-pattern-missing-field.ari:3:3\n   |\n 3 |   y: i64,\n   |   ^"
  Note index=0 location=none message="named product patterns must either mention every field or explicitly ignore the rest"
  Help index=0 location=none message="add the missing fields or include '..' in the pattern"
